--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,5 @@
 <nav>
-    <div class="container">
+    <div class="container nav">
         <div class="left">
             <div class="brand-text">LinkifyText</div>
             <a href="/"><img class="add" src="/assets/add.png" alt="" /></a>
