option to never expire the paste

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -226,6 +226,7 @@
                             <option value="15">15 mins</option>
                             <option value="30">30 mins</option>
                             <option value="60">60 mins</option>
+                            <option value="0">Never</option>
                         </select>
                     </div>
                     <button type="submit" class="btn">Create Link</button>
