minor style change and added favicon

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Page to edit a paste content">
+        <meta name="description" content="Page to edit a paste content" />
 
         <title>LinkifyText | Edit</title>
+        <link rel="icon" href="/assets/copy.ico" />
         <link rel="stylesheet" href="/stylesheets/nav.css" />
         <link rel="stylesheet" href="/stylesheets/footer.css" />
 
