--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,7 @@
             name="description"
             content="Easily generate shareable links for any text with Linkify Text. Simply paste your text, and instantly create a link to share with others. It's quick, convenient, and hassle-free. Try it now!"
         />
+        <link rel="icon" href="/assets/copy.ico" />
 
         <link rel="stylesheet" href="/stylesheets/nav.css" />
         <link rel="stylesheet" href="/stylesheets/footer.css" />
